# agentreplay

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.appimage  Dockerfile.windows  README.md  agentreplay-server-config.toml  azure-pipelines.yml  benchmark_otlp.py  config.sample.json  flowtrace-server-config.toml  justfile  package-lock.json  release-please-config.json  run-tauri.sh  start-web.sh  test_otlp_grpc.py  video-config.json  view-logs.sh
agentreplay-cli/: Cargo.toml
agentreplay-cli/src/: main.rs
agentreplay-core/: Cargo.toml
agentreplay-core/src/: actionable_feedback.rs  coding_session.rs  config.rs  edge.rs  edge_validation_tests.rs  enterprise.rs  error.rs  eval.rs  eval_dataset.rs  eval_result.rs  eval_trace.rs  event.rs  genai.rs  insights.rs  key.rs  language.rs  lib.rs  model_comparison.rs  model_pricing.rs  observation.rs  observation_types.rs  privacy.rs  prompt.rs  quality.rs  saved_view.rs  session_summary.rs  tool.rs  tool_definition.rs
agentreplay-core/src/context/: builder.rs  config.rs  mod.rs  token_calculator.rs
agentreplay-core/src/memory/: event_batcher.rs  mod.rs
agentreplay-core/src/memory_agent/: agent.rs  config.rs  message.rs  mod.rs  session.rs
agentreplay-core/src/privacy/: processor.rs
agentreplay-core/src/project/: mod.rs  project_id.rs  worktree.rs
agentreplay-core/tests/: memory_system_integration.rs  timestamp_config_tests.rs
agentreplay-evals/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
agentreplay-evals/src/: actionable_feedback.rs  cache.rs  comparator.rs  custom_metrics.rs  lib.rs  llm_client.rs  online_evaluator.rs  presets.rs  progressive_eval.rs  registry.rs  statistics.rs  trace_summarizer.rs  trial_sandbox.rs
agentreplay-index/: Cargo.toml  README.md
agentreplay-index/benches/: concurrent_bench.rs  hnsw_bench.rs  quantization_bench.rs  vector_bench.rs
agentreplay-index/src/: causal.rs  causal_csr.rs  compression.rs  concept_index.rs  hnsw_stress_tests.rs  lib.rs  metrics.rs  vamana.rs  vector.rs  vector_hnsw.rs  vector_old.rs
agentreplay-index/tests/: index_integration.rs  integration_test_vamana.py  integration_tests.rs  quality_test.rs  vamana_integration_test.rs
agentreplay-memory/: Cargo.toml
agentreplay-memory/src/: config.rs  context.rs  engine.rs  error.rs  lib.rs  observation.rs  session.rs  storage.rs
agentreplay-observability/: Cargo.toml
agentreplay-observability/src/: batcher.rs  config.rs  genai_conventions.rs  genai_instrumentation.rs  lib.rs  metrics.rs  span_mapper.rs  storage_metrics.rs  tracer.rs
agentreplay-plugins/core/: Cargo.toml
agentreplay-query/: Cargo.toml
agentreplay-query/src/: aggregation.rs  annotations.rs  comparison.rs  cost_engine.rs  dataset_manager.rs  engine.rs  enterprise_methods.rs  lib.rs  merge.rs  nl_query_parser.rs  prompt_manager.rs  retention.rs  semantic.rs  session.rs
agentreplay-query/tests/: prompt_persistence.rs
agentreplay-server/: Cargo.toml
agentreplay-server/schemas/: eval_trace_v1.schema.json
agentreplay-server/src/: admission.rs  agent_registry.rs  batcher.rs  cache.rs  config.rs  cost_tracker.rs  lib.rs  main.rs  otel_genai.rs  otlp_service.rs  project_manager.rs  project_registry.rs  sanitization.rs  validation.rs
agentreplay-server/tests/: README.md  contract_outputs.rs  evaluation_api_test.rs
agentreplay-storage/: Cargo.toml  PAYLOAD_INDEX_README.md
agentreplay-storage/benches/: storage_bench.rs
agentreplay-storage/src/: aff.rs  analytics_bucket.rs  backend.rs  bloom.rs  compression.rs  eval_store.rs  event_store.rs  lib.rs  memory_agent_store.rs  metrics_agg.rs  observation_store.rs  pending_queue.rs  sharded_metrics.rs  sochdb_unified.rs
agentreplay-storage/tests/: storage_integration.rs
agentreplay-tauri/: Cargo.toml  build.rs  build.sh  dev-server.sh  tauri.conf.json  tauri.macos.conf.json
agentreplay-tauri/icons/: ICONS_README.md  README.md  convert_svg_icons.py  create_ico.py  create_icons.py  icon.icns
agentreplay-tauri/src/: commands.rs  comparison_engine.rs  error.rs  health.rs  llm.rs  llm_service.rs  main.rs  memory.rs  menu.rs  otlp_server.rs  plugins.rs  project_store.rs  server.rs  sse.rs  sysinfo_state.rs
agentreplay-tauri/tests/: README.md  integration_test.rs
flowtrace-cli/: Cargo.toml
flowtrace-cli/src/: main.rs
flowtrace-core/: Cargo.toml
flowtrace-core/src/: actionable_feedback.rs  config.rs  edge.rs  enterprise.rs  error.rs  eval.rs  eval_result.rs  eval_trace.rs  event.rs  insights.rs  key.rs  language.rs  lib.rs  observation.rs  privacy.rs  saved_view.rs  session_summary.rs  tool_definition.rs
flowtrace-core/tests/: memory_system_integration.rs  timestamp_config_tests.rs
flowtrace-experiments/: Cargo.toml
flowtrace-experiments/src/: ab_testing.rs  lib.rs
flowtrace-index/: Cargo.toml  README.md
flowtrace-index/benches/: concurrent_bench.rs  hnsw_bench.rs  quantization_bench.rs  vector_bench.rs
flowtrace-index/src/: causal.rs  causal_csr.rs  concept_index.rs  lib.rs  metrics.rs  vector.rs  vector_old.rs
flowtrace-index/tests/: index_integration.rs  integration_test_vamana.py  integration_tests.rs  quality_test.rs  vamana_integration_test.rs
flowtrace-memory/: Cargo.toml
flowtrace-memory/src/: config.rs  context.rs  lib.rs  observation.rs  session.rs  storage.rs
flowtrace-observability/: Cargo.toml
flowtrace-observability/src/: batcher.rs  config.rs  genai_conventions.rs  genai_instrumentation.rs  lib.rs  tracer.rs
flowtrace-query/: Cargo.toml
flowtrace-query/src/: aggregation.rs  comparison.rs  dataset_manager.rs  engine.rs  enterprise_methods.rs  lib.rs  merge.rs  prompt_manager.rs  retention.rs  semantic.rs
flowtrace-query/tests/: prompt_persistence.rs
flowtrace-server/: Cargo.toml
flowtrace-server/schemas/: run_detail_v1.schema.json
flowtrace-server/src/: admission.rs  agent_registry.rs  cache.rs  config.rs  cost_tracker.rs  lib.rs  main.rs  otlp_service.rs  project_manager.rs  sanitization.rs  validation.rs
flowtrace-server/tests/: README.md  contract_outputs.rs
sdks/rust/: Cargo.toml  README.md
(+946 files in other folders)
