# Copyright 2025 Sushanth (https://github.com/sushanthpy)
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[workspace]
members = [
    "agentreplay-core",
    "agentreplay-storage",
    "agentreplay-index",
    "agentreplay-query",
    "agentreplay-cli",
    "agentreplay-server",
    "agentreplay-observability",
    "agentreplay-telemetry",
    "agentreplay-evals",
    "agentreplay-prompts",
    "agentreplay-experiments",
    "agentreplay-plugins/core",
    "agentreplay-plugins/sdk/rust",
]
exclude = ["agentreplay-tauri", "sdks/rust"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Agentreplay Contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/sochdb/agentreplay"

[workspace.dependencies]
# NOTE: tokio was removed - storage engine uses sync I/O (std::fs, std::thread)
# If async is needed in future, add it back with minimal features

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.12"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Data structures
parking_lot = "0.12"

# Hashing
twox-hash = "1.6"
seahash = "4.1"
blake3 = "1.5"
hex = "0.4"

# Math and vectors
# NOTE: nalgebra was removed - unused (ndarray is used for vector ops)
ndarray = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and Observability
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.25"

# OpenTelemetry
opentelemetry = { version = "0.24", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.24", features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry-semantic-conventions = "0.16"
opentelemetry-http = "0.13"
opentelemetry-stdout = { version = "0.5", features = ["trace", "metrics"] }
tokio = { version = "1.35", features = ["full"] }
tonic = "0.12"
reqwest = { version = "0.11", features = ["json"] }

# Testing
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

# Utilities
byteorder = "1.5"
memmap2 = "0.9"
dashmap = "5.5"
rand = "0.8"
moka = "0.12"

# CLI
clap = { version = "4.4", features = ["derive"] }

# SochDB integration (storage backend migration)
sochdb-core = { version = "0.4.8" }
sochdb-storage = { version = "0.4.8" }
sochdb-index = { version = "0.4.8" }
sochdb-query = { version = "0.4.8" }
sochdb = { version = "0.4.8", features = ["embedded"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
