# Copyright 2025 Sushanth (https://github.com/sushanthpy)
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "agentreplay-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agentreplay-core = { path = "../agentreplay-core" }
agentreplay-storage = { path = "../agentreplay-storage" }
agentreplay-index = { path = "../agentreplay-index" }
agentreplay-query = { path = "../agentreplay-query" }
agentreplay-plugins = { path = "../agentreplay-plugins/core" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
toml = "0.8"
semver = "1.0"
flate2 = "1.0"
tar = "0.4"
zip = "2.2"
chrono = "0.4"

[[bin]]
name = "agentreplay"
path = "src/main.rs"
