# Copyright 2025 Sushanth (https://github.com/sushanthpy)
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "agentreplay-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }
blake3 = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { workspace = true, features = ["sync", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["time"] }
tokio-stream = "0.1"
reqwest = { workspace = true, features = ["json"] }
toml = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
dashmap = { workspace = true }
regex = "1.10"
rand = { workspace = true }
futures = "0.3"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
