# Copyright 2025 Sushanth (https://github.com/sushanthpy)
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "agentreplay-evals"
version = "0.1.0"
edition = "2021"
authors = ["Agentreplay Team"]
description = "Evaluation framework for Agentreplay agent traces"
license = "AGPL-3.0-or-later"

[dependencies]
# Core dependencies
agentreplay-core = { path = "../agentreplay-core" }
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"

# HTTP client for LLM-as-judge
reqwest = { version = "0.11", features = ["json"] }

# Concurrency control
futures = "0.3"
parking_lot = "0.12"
rand = { workspace = true }

# Regex for pattern matching
regex = "1.10"

# Caching
moka = { version = "0.12", features = ["future"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time handling
chrono = { workspace = true }

# TOON - Token-efficient JSON alternative for LLM prompts (~50% token reduction)
serde_toon = "0.2"

# OpenTelemetry semantic conventions
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-semantic-conventions = "0.13"
dashmap.workspace = true

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
criterion = "0.5"
