# Copyright 2025 Sushanth (https://github.com/sushanthpy)
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "agentreplay-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agentreplay-core = { path = "../agentreplay-core" }
agentreplay-storage = { path = "../agentreplay-storage" }
dashmap = { workspace = true }
parking_lot = { workspace = true }
blake3 = { workspace = true } # Checksum for corruption detection
# nalgebra removed - unused (ndarray handles vector ops)
ndarray = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true } # Logging for dimension locking
half = { version = "2.4", features = ["serde"] } # f16/bf16 support for quantization
smallvec = { version = "1.13", features = ["serde"] } # Inline storage for neighbor lists
bincode = "1.3" # Binary serialization for persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # JSON serialization for metadata
prometheus = "0.13" # Metrics and observability
lazy_static = "1.4" # Static metrics initialization
flate2 = "1.0" # Gzip compression for persistence
memmap2.workspace = true
regex = "1.10" # For concept extraction
sochdb = { workspace = true }
sochdb-index = { workspace = true } # Use SochDB's HNSW instead of duplicate

# Embedding dependencies
crossbeam-channel = "0.5" # MPMC channels for embedding pipeline
sha2 = "0.10" # SHA-256 for model checksums
dirs = "5.0" # Platform-specific directories
tokio = { version = "1.0", features = ["rt-multi-thread", "sync"], optional = true } # Async runtime
async-trait = "0.1" # Async trait support
fastembed = { version = "4", optional = true } # Local ONNX embeddings

# LLM crate for external embedding providers (OpenAI, Ollama, etc.)
llm = { version = "1.3", optional = true }

[features]
default = ["local-embeddings"]
local-embeddings = []
fastembed-embeddings = ["dep:fastembed"]
llm-embeddings = ["dep:llm", "dep:tokio"]

[dev-dependencies]
tempfile = { workspace = true }
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vector_bench"
harness = false

[[bench]]
name = "hnsw_bench"
harness = false

[[bench]]
name = "concurrent_bench"
harness = false

[[bench]]
name = "quantization_bench"
harness = false
