# Copyright 2025 Sushanth (https://github.com/sushanthpy)
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "agentreplay-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
agentreplay-core = { path = "../agentreplay-core" }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
byteorder = { workspace = true }
dashmap = { workspace = true }
twox-hash = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
moka = { workspace = true, features = ["sync"] }
ahash = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
zstd = "0.13"
similar = "2.5"
uuid = { version = "1.8", features = ["v4"] }
crc32fast = "1.3"

# SochDB dependencies (required for storage backend)
sochdb = { workspace = true }
sochdb-core = { workspace = true }
sochdb-storage = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["uio"] }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false
