# Copyright 2025 Sushanth (https://github.com/sushanthpy)
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "agentreplay"
version = "0.1.1-1"
description = "Agentreplay Desktop - AgentFlow Database for AI Observability"
authors = ["Agentreplay Contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/sochdb/agentreplay"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core – in v2, dialog/fs/notification/etc. are plugins, not core features
tauri = { version = "2.9.2", features = ["tray-icon"] }

# Official Tauri v2 plugins
tauri-plugin-shell = "2.3.3"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.4"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2.0"

# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"  # For CancellationToken

# ZIP archive support for backup export/import
zip = "2.2"
# Agentreplay workspace crates
agentreplay-core = { path = "../agentreplay-core" }
agentreplay-storage = { path = "../agentreplay-storage" }
agentreplay-index = { path = "../agentreplay-index" }
agentreplay-query = { path = "../agentreplay-query" }
agentreplay-observability = { path = "../agentreplay-observability" }
agentreplay-evals = { path = "../agentreplay-evals" }
agentreplay-plugins = { path = "../agentreplay-plugins/core" }
agentreplay-server = { path = "../agentreplay-server" }

# Additional dependencies
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
parking_lot = "0.12"
dirs = "5.0"  # For home directory resolution
uuid = { version = "1.0", features = ["v4"] }

# System information (CPU, RAM, etc.)
sysinfo = "0.31"

# LLM provider abstraction - unified interface for multiple backends
# Using specific features to avoid pulling in CLI/TTS/STT dependencies
llm = { version = "1.3", default-features = false, features = [
    "openai",
    "anthropic", 
    "ollama",
    "deepseek",
    "google",
    "mistral",
    "default-tls"
] }

# For server export capability (hybrid mode)
reqwest = { version = "0.11", features = ["json"] }

# For backup functionality
tar = "0.4"
flate2 = "1.0"
chrono = "0.4"

# HTTP server for SDK ingestion
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-trait = "0.1"

# Rate limiting for ingestion endpoints
governor = "0.6"

# OTLP/gRPC support
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
opentelemetry-proto = { version = "0.7", features = ["gen-tonic", "trace"] }
bytes = "1.5"
base64 = "0.22"
hex = "0.4"

# SSE streaming dependencies
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
libc = "0.2.178"

# macOS window effects and panel support
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"
# Pinned to specific commit for stability (from v2.1 branch, Jan 2025)
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "da9c9a8d4eb7f0524a2508988df1a7d9585b4904" }

[dev-dependencies]
tempfile = "3.0"

[features]
# By default all of Tauri's features are enabled
# If you prefer to pick specific features, comment out this line
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Dev profile: opt-level=1 gives basic optimizations (inlining, dead code removal)
# without the full compile time of release. Reduces debug memory ~3-5x by enabling
# the same layout optimizations that release uses for enums, Vec, HashMap internals.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2  # Optimize dependencies even in dev mode

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"  # Optimize for size (more aggressive than "s")
strip = true
incremental = false

# Local development overrides for SochDB (comment out for CI/publish)
