# Copyright 2025 Sushanth (https://github.com/sushanthpy)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "flowtrace-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
flowtrace-core = { path = "../flowtrace-core" }
flowtrace-storage = { path = "../flowtrace-storage" }
flowtrace-index = { path = "../flowtrace-index" }
flowtrace-query = { path = "../flowtrace-query" }
flowtrace-plugins = { path = "../flowtrace-plugins/core" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
toml = "0.8"
semver = "1.0"
flate2 = "1.0"
tar = "0.4"
zip = "2.2"
chrono = "0.4"

[[bin]]
name = "flowtrace"
path = "src/main.rs"
