# Copyright 2025 Sushanth (https://github.com/sushanthpy)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "flowtrace-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }
blake3 = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { workspace = true, features = ["sync", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["time"] }
tokio-stream = "0.1"
reqwest = { workspace = true, features = ["json"] }
toml = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
dashmap = { workspace = true }
regex = "1.10"
rand = { workspace = true }
futures = "0.3"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
